@@ -105,6 +105,10 @@ C-API
 Library
 -------
 
+- Issue #9758: When fcntl.ioctl() was called with mutable_flag set to True,
+  and the passed buffer was exactly 1024 bytes long, the buffer wouldn't
+  be updated back after the system call.  Original patch by Brian Brazil.
+
 - Issue #6656: fix locale.format_string to handle escaped percents
   and mappings.
 
